--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Shiraz Ali | Portfolio </title>
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
-    <link rel="stylesheet" type="text/css" href="./assets/Css/style.css">
-    <link rel="stylesheet" type="text/css" href="./assets/Css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css" integrity="sha512-9xKTRVabjVeZmc+GUW8GgSmcREDunMM+Dt/GrzchfN8tkwHizc5RP4Ok/MXFFy5rIjJjzhndFScTceq5e6GvVQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -257,6 +257,6 @@
 <!-- Close Coding Footer --->
 <script src="https://kit.fontawesome.com/f8e1a90484.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<script src="assets/Js/Js file.js"></script>
+<script src="./assets/Js/Js file.js"></script>
 </body>
 </html>
