--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <div class="container">
         <div class="row">
             <div class="site-logo">
-                <a href="#"> Shiraz Ali </a>
+                <a href="https://shiraz998.github.io/portfolio"> Shiraz Ali </a>
             </div>
             <div class="menuicon">
                 <i class="fa-solid fa-bars"></i>
             </div>
             <div class="nav-links">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="https://shiraz998.github.io/portfolio">Home</a></li>
                     <li><a href="#about">About Me</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#project">Projects</a></li>
@@ -233,7 +233,7 @@
             </div>
             <div class="f-links">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="https://shiraz998.github.io/portfolio">Home</a></li>
                     <li><a href="#about">About Me</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#project">Projects</a></li>
@@ -250,7 +250,7 @@
             </div>
         </div>
         <div class="f-last">
-            <p>© 2025 <a href="#">Shiraz Ali</a> | All Rights Reserved</p>
+            <p>© 2025 <a href="https://shiraz998.github.io/portfolio">Shiraz Ali</a> | All Rights Reserved</p>
         </div>
     </div>
 </footer>
