--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         designing and creating websites using
                         web languages such as HTML5, CSS3,
                         Basic JavaScript, WordPress and Basic
-                        Php.
+                        React Js.
                     </p>
                 </div>
                 <div class="r-social">
