--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="img-box">
-                        <img src="./assets/images/react.png" alt="image">
+                        <img src="./assets/images/reactjs.png" alt="image">
                     </div>
                 </div>
                 <div class="swiper-slide">
@@ -87,7 +87,7 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="img-box">
-                        <img src="./assets/images/react.png" alt="image">
+                        <img src="./assets/images/reactjs.png" alt="image">
                     </div>
                 </div>
             </div>
